# homework

./: .gitignore  Makefile  README.md  docker-compose.yml  template.env
service/: main.py  pyproject.toml
service/docker/: Dockerfile
service/scripts/: entrypoint.sh
service/service/: config.py  controllers.py  dependencies.py  dtos.py  statistics.py  storage.py
service/service/utils/: interval_tree.py
service/tests/end_to_end/: test_service_api.tavern.yaml
service/tests/unit/: test_dtos.py  test_storage.py
service/tests/unit/utils/: test_interval_tree.py
